force-app/main/default/objects/Opportunity/fields/Account_Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Alternate_Phone__c</fullName>
    <formula>Account.Alternate_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Alternate Phone</label>
    <type>Text</type>
</CustomField>