force-app/main/default/objects/Opportunity/fields/Addendum__c.field-meta.xml
<CustomField>
    <fullName>Addendum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Addendum</label>
    <referenceTo>Addendum__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>