force-app/main/default/objects/Opportunity/fields/Addendum_Type__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Type__c</fullName>
    <description>Sugar field for Save Opportunity</description>
    <label>Addendum Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing Change - Change Rate</fullName>
            </value>
            <value>
                <fullName>Billing Change - Defer/Pause</fullName>
            </value>
            <value>
                <fullName>Billing Change - Refund</fullName>
            </value>
            <value>
                <fullName>Billing Change - Skip (Free Month)</fullName>
            </value>
            <value>
                <fullName>Billing Change - Voice Add</fullName>
            </value>
            <value>
                <fullName>Billing Change - Voice Remove</fullName>
            </value>
            <value>
                <fullName>Other Addendum - Active Presence</fullName>
            </value>
            <value>
                <fullName>Other Addendum - Assignment Agreement</fullName>
            </value>
            <value>
                <fullName>Other Addendum - Simpletrac</fullName>
            </value>
            <value>
                <fullName>Other Addendum - Trial Waive</fullName>
            </value>
            <value>
                <fullName>Other Addendum - Trail Extension</fullName>
            </value>
            <value>
                <fullName>Other Addendum - Extended Term (Same MSF)</fullName>
            </value>
            <value>
                <fullName>Other - No Change</fullName>
            </value>
            <value>
                <fullName>None - Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>