force-app/main/default/objects/Opportunity/fields/Admin_FMS__c.field-meta.xml
<CustomField>
    <fullName>Admin_FMS__c</fullName>
    <formula>Account.MRFMS__c</formula>
    <label>Admin FMS</label>
    <type>Date</type>
</CustomField>