force-app/main/default/objects/Opportunity/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The affiliate who provided the original lead</description>
    <inlineHelpText>Select the affiliate who provided the original lead</inlineHelpText>
    <label>Affiliate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Affiliate</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Affiliate)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>