force-app/main/default/objects/Opportunity/fields/Affiliate_ID__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_ID__c</fullName>
    <label>Affiliate ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>