force-app/main/default/objects/Opportunity/fields/Ambassador__Ambassador_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Ambassador__Ambassador_Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>