force-app/main/default/objects/Opportunity/fields/Ambassador__Positive_Opportunity_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ambassador__Positive_Opportunity_Commission_Amount__c</fullName>
    <label>Positive Opportunity Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>