force-app/main/default/objects/Opportunity/fields/Ambassador__Referred_By_Ambassador__c.field-meta.xml
<CustomField>
    <fullName>Ambassador__Referred_By_Ambassador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Ambassador</label>
    <referenceTo>Ambassador__Ambassador__c</referenceTo>
    <relationshipLabel>Referred Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>