force-app/main/default/objects/Opportunity/fields/Ambassador_Commission_Created__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Commission_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set via Apex after successful API call</description>
    <label>Ambassador Commission Created</label>
    <type>Checkbox</type>
</CustomField>