force-app/main/default/objects/Opportunity/fields/Apex_Override_Validation__c.field-meta.xml
<CustomField>
    <fullName>Apex_Override_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows Apex code to bypass validation rules.  Reset to false by Workflow field update.</description>
    <label>Apex Override Validation</label>
    <type>Checkbox</type>
</CustomField>