force-app/main/default/objects/Opportunity/fields/Approval_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Approval_Free_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approval - Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>