force-app/main/default/objects/Opportunity/fields/Approval_Level_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Required__c</fullName>
    <label>Approval Level Required</label>
    <summarizedField>OpportunityLineItem.Approval_Level_Required__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>