force-app/main/default/objects/Opportunity/fields/Approval_Level_Required_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Required_Orientation__c</fullName>
    <label>Approval Level Required - Orientation</label>
    <summarizedField>OpportunityLineItem.Number_of_Free_Months__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>