force-app/main/default/objects/Opportunity/fields/Approval_Level_Required_Term__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Required_Term__c</fullName>
    <formula>IF( Owner.Approval_Exempt__c = true , 0 ,
	IF( RecordType.Name = &quot;New Practice Business&quot; , /*The term is usually set to coterminate in other record types*/
		IF( RecurSoft__Initial_Contract_Term__c  &gt;= 
			MIN( Approved_Term__c, Pricebook2.Level_0_Limit_Term__c ) , 0 , 
			IF( RecurSoft__Initial_Contract_Term__c &gt;= 
				MIN( Approved_Term__c, Pricebook2.Level_1_Limit_Term__c ) , 1 , 
				IF( RecurSoft__Initial_Contract_Term__c  &gt;=
					MIN( Approved_Term__c, Pricebook2.Level_2_Limit_Term__c ) , 2 , 3
				)
			)
		) , 0
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Level Required - Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>