force-app/main/default/objects/Opportunity/fields/Approvals_Required__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Required__c</fullName>
    <label>Approvals Required</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>