force-app/main/default/objects/Opportunity/fields/Approved_Term__c.field-meta.xml
<CustomField>
    <fullName>Approved_Term__c</fullName>
    <defaultValue>24</defaultValue>
    <label>Approved Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>