force-app/main/default/objects/Opportunity/fields/Assist_Requested__c.field-meta.xml
<CustomField>
    <fullName>Assist_Requested__c</fullName>
    <description>Used to create an ICU Target if one isn&#39;t already created and to denote that one has been created if one was created proactively  MS</description>
    <label>Assist Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assist Needed</fullName>
            </value>
            <value>
                <fullName>Target Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>