force-app/main/default/objects/Opportunity/fields/Auto_Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Closed_Won_Date__c</fullName>
    <description>Used by Accounting to set a date in the future that an Opportunity should be set to Closed Won. This allows them to let an existing Opportunity run out without a renewal and setup a new Opportunity without creating the subscription right away.</description>
    <label>Auto Closed Won Date</label>
    <type>Date</type>
</CustomField>