force-app/main/default/objects/Opportunity/fields/Bill_to_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Account_ID__c</fullName>
    <formula>RecurSoft__Bill_to_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to Account ID</label>
    <type>Text</type>
</CustomField>