force-app/main/default/objects/Opportunity/fields/Bill_To_Partner__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Partner__c</fullName>
    <description>Selected when it is a deal that will be billed to the partner</description>
    <label>Bill To Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eyefinity</fullName>
            </value>
            <value>
                <fullName>Inneractive</fullName>
            </value>
            <value>
                <fullName>QSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>