force-app/main/default/objects/Opportunity/fields/Billing_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Name__c</fullName>
    <formula>RecurSoft__Bill_to_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account Name</label>
    <type>Text</type>
</CustomField>