force-app/main/default/objects/Opportunity/fields/Cancel_After_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Cancel_After_Renewal__c</fullName>
    <description>Allows a prediction for Future Cancels Matthew Schetselaar 8/12/14</description>
    <formula>Cancel_Month__c &gt;  Projected_Contract_Expiration_Renewal_Mo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel After Renewal</label>
    <type>Checkbox</type>
</CustomField>