force-app/main/default/objects/Opportunity/fields/Cancel_Month__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Month__c</fullName>
    <description>Sugar field for Save Opportunity</description>
    <label>Cancel Month</label>
    <type>Date</type>
</CustomField>