force-app/main/default/objects/Opportunity/fields/Cancel_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request_Type__c</fullName>
    <description>Sugar field for Retention Opportunities</description>
    <label>Cancel Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>