force-app/main/default/objects/Opportunity/fields/Cancellation_Details__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Details__c</fullName>
    <description>Sugar field for Retention Opportunities</description>
    <label>Cancellation Details</label>
    <type>TextArea</type>
</CustomField>