force-app/main/default/objects/Opportunity/fields/Cancellation_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reasons__c</fullName>
    <description>Sugar field for Retention Opportunities</description>
    <label>Cancellation Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy/Collections/Out of business</fullName>
            </value>
            <value>
                <fullName>Clean-up / Backlog</fullName>
            </value>
            <value>
                <fullName>Contract term / length</fullName>
            </value>
            <value>
                <fullName>In contract with other provider</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Never trained / not ready</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Not satisfied - current features</fullName>
            </value>
            <value>
                <fullName>Not satisfied - Sales / personnel</fullName>
            </value>
            <value>
                <fullName>Not satisfied - Support / personnel</fullName>
            </value>
            <value>
                <fullName>Not satisfied - unavailable features</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient complaints</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Refused to give reason / unknown</fullName>
            </value>
            <value>
                <fullName>Staff resistance</fullName>
            </value>
            <value>
                <fullName>Sync Issue</fullName>
            </value>
            <value>
                <fullName>Regulation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>