force-app/main/default/objects/Opportunity/fields/Closed_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Closed_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stamps the Manager at time of closing the Opportunity.  Set via Apex.</description>
    <label>Closed Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesManager</relationshipName>
    <type>Lookup</type>
</CustomField>