force-app/main/default/objects/Opportunity/fields/Closed_Owner_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Closed_Owner_Role_Id__c</fullName>
    <description>Identifies the Role of the Owner at the time of closing. Set via Apex.</description>
    <label>Closed Owner Role Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>