force-app/main/default/objects/Opportunity/fields/Closed_Owner_VP__c.field-meta.xml
<CustomField>
    <fullName>Closed_Owner_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stamps the VP at time of closing the Opportunity.  Set by Apex</description>
    <label>Closed Owner VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesVP</relationshipName>
    <type>Lookup</type>
</CustomField>