force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4 Patient Care</fullName>
            </value>
            <value>
                <fullName>DemandForce</fullName>
            </value>
            <value>
                <fullName>eCentral</fullName>
            </value>
            <value>
                <fullName>eReminders</fullName>
            </value>
            <value>
                <fullName>Lighthouse</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other(Note name in Other Competitor)</fullName>
            </value>
            <value>
                <fullName>Patient Activator</fullName>
            </value>
            <value>
                <fullName>Phone Tree</fullName>
            </value>
            <value>
                <fullName>PM/EMR</fullName>
            </value>
            <value>
                <fullName>Practice Mojo</fullName>
            </value>
            <value>
                <fullName>RevenueWell</fullName>
            </value>
            <value>
                <fullName>Sesame</fullName>
            </value>
            <value>
                <fullName>Teledental</fullName>
            </value>
            <value>
                <fullName>Televox</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Weave</fullName>
            </value>
            <value>
                <fullName>Websystem3</fullName>
            </value>
            <value>
                <fullName>Yapi</fullName>
            </value>
            <value>
                <fullName>ZocDoc</fullName>
            </value>
            <value>
                <fullName>Phresia (Tablet)</fullName>
            </value>
            <value>
                <fullName>Patient Pop</fullName>
            </value>
            <value>
                <fullName>Doctable</fullName>
            </value>
            <value>
                <fullName>Call Point</fullName>
            </value>
            <value>
                <fullName>Relatient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>