force-app/main/default/objects/Opportunity/fields/Contract_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date_Time__c</fullName>
    <description>Contract signed date</description>
    <inlineHelpText>Contract signed date</inlineHelpText>
    <label>Contract Date Time</label>
    <type>DateTime</type>
</CustomField>