force-app/main/default/objects/Opportunity/fields/Contract_Signed_IP__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_IP__c</fullName>
    <label>Contract Signed IP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>