force-app/main/default/objects/Opportunity/fields/Contract_Signer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signer__c</fullName>
    <label>Contract Signer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>