force-app/main/default/objects/Opportunity/fields/Converted_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Converted Lead ID</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>