force-app/main/default/objects/Opportunity/fields/Create_Cancel_Billing_Subscription_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_Cancel_Billing_Subscription_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check if you would like Accounting to cancel the billing subscription for this account (Usually used for Trial Cancel Requests)</inlineHelpText>
    <label>Create Cancel Billing Subscription Case</label>
    <type>Checkbox</type>
</CustomField>