force-app/main/default/objects/Opportunity/fields/Current_MSF_including_Voice__c.field-meta.xml
<CustomField>
    <fullName>Current_MSF_including_Voice__c</fullName>
    <description>Sugar field for Save Opportunities</description>
    <inlineHelpText>What they are currently paying including all extras</inlineHelpText>
    <label>Current MSF (including Voice)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>