force-app/main/default/objects/Opportunity/fields/Current_RR_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_RR_Owner__c</fullName>
    <description>This field will capture the name of the user who was most recently assigned this lead via the lead Round Robin(RR).  Mapped in Lead conversion.</description>
    <inlineHelpText>The user who was most recently assigned the lead via the Lead Round Robin(RR).</inlineHelpText>
    <label>Current RR Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>