force-app/main/default/objects/Opportunity/fields/Current_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Time__c</fullName>
    <formula>Account.tz__Local_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Time</label>
    <type>Text</type>
</CustomField>