force-app/main/default/objects/Opportunity/fields/Custom_Settings_Completed__c.field-meta.xml
<CustomField>
    <fullName>Custom_Settings_Completed__c</fullName>
    <formula>Account.Custom_Settings_Completed__c</formula>
    <label>Custom Settings Completed</label>
    <type>Date</type>
</CustomField>