force-app/main/default/objects/Opportunity/fields/Custom_Settings_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Custom_Settings_Scheduled_For__c</fullName>
    <formula>Account.Custom_Settings_Scheduled_For__c</formula>
    <label>Custom Settings Scheduled For</label>
    <type>Date</type>
</CustomField>