force-app/main/default/objects/Opportunity/fields/Days_to_Activate__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activate__c</fullName>
    <description>Sugar field for Save Opportunity</description>
    <formula>Most_Recent_Activation_Date__c - Most_Recent_Contract_Date__c</formula>
    <label>Days to Activate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>