force-app/main/default/objects/Opportunity/fields/Deal_Desk_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approval_Date__c</fullName>
    <description>Date stamp set by approval process.  Used to validate contract link.</description>
    <label>Deal Desk Approval Date</label>
    <type>DateTime</type>
</CustomField>