force-app/main/default/objects/Opportunity/fields/Demo_Completed_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Completed_Stage_Date__c</fullName>
    <description>Stamped when the Stage changes to Demo Completed</description>
    <label>Demo Completed Stage Date</label>
    <type>DateTime</type>
</CustomField>