force-app/main/default/objects/Opportunity/fields/Demo_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Demo_Request_Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo Request Reason</label>
    <referenceTo>Campaign_Influence__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>