force-app/main/default/objects/Opportunity/fields/Demo_Scheduled_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_Stage_Date__c</fullName>
    <description>Stamped on the date that the Stage is first set to Demo Scheduled</description>
    <label>Demo Scheduled Stage Date</label>
    <type>DateTime</type>
</CustomField>