force-app/main/default/objects/Opportunity/fields/Do_Not_Send_Login_Details__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Login_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Login Details</label>
    <type>Checkbox</type>
</CustomField>