force-app/main/default/objects/Opportunity/fields/Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to identify the duplicate Account that should be merged</description>
    <label>Duplicate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Duplicate Account)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>