force-app/main/default/objects/Opportunity/fields/Duplicate_Activity_Checked__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Activity_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Activity Checked</label>
    <type>Checkbox</type>
</CustomField>