force-app/main/default/objects/Opportunity/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <formula>$Api.Partner_Server_URL_70</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endpoint</label>
    <type>Text</type>
</CustomField>