force-app/main/default/objects/Opportunity/fields/First_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Date__c</fullName>
    <formula>Account.First_Contact_Date__c</formula>
    <label>First Contact Date</label>
    <type>Date</type>
</CustomField>