force-app/main/default/objects/Opportunity/fields/has_DemandForce__c.field-meta.xml
<CustomField>
    <fullName>has_DemandForce__c</fullName>
    <formula>IF(INCLUDES(  Competitor__c  , &quot;DemandForce&quot;), 1 , NULL)</formula>
    <label>has DemandForce</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>