force-app/main/default/objects/Opportunity/fields/has_LightHouse__c.field-meta.xml
<CustomField>
    <fullName>has_LightHouse__c</fullName>
    <formula>IF(INCLUDES(  Competitor__c  , &quot;Lighthouse&quot;), 1 , NULL)</formula>
    <label>has LightHouse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>