force-app/main/default/objects/Opportunity/fields/has_Weave__c.field-meta.xml
<CustomField>
    <fullName>has_Weave__c</fullName>
    <formula>IF(INCLUDES(  Competitor__c  , &quot;Weave&quot;), 1 , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>has Weave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>