force-app/main/default/objects/Opportunity/fields/Healthgrades_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Healthgrades_Pricebook__c</fullName>
    <formula>Account.Healthgrades_Pricebook__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Healthgrades Pricebook</label>
    <type>Text</type>
</CustomField>