force-app/main/default/objects/Opportunity/fields/HGFreeMonths__c.field-meta.xml
<CustomField>
    <fullName>HGFreeMonths__c</fullName>
    <label>HGFreeMonths</label>
    <summarizedField>OpportunityLineItem.Number_of_Free_Months__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Formula__c</field>
        <operation>equals</operation>
        <value>3005</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>