force-app/main/default/objects/Opportunity/fields/HGPrice__c.field-meta.xml
<CustomField>
    <fullName>HGPrice__c</fullName>
    <label>HGPrice</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Formula__c</field>
        <operation>equals</operation>
        <value>3005</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>