force-app/main/default/objects/Opportunity/fields/IntacctID__c.field-meta.xml
<CustomField>
    <fullName>IntacctID__c</fullName>
    <description>Do NOT use. Only created temporarily to fix the broken contract process. When that field has been changed to the Recursoft__IntacctID__c, then we can delete this field.</description>
    <label>Old Intacct ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>