force-app/main/default/objects/Opportunity/fields/Invoiced_MSF__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_MSF__c</fullName>
    <label>Invoiced MSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>