force-app/main/default/objects/Opportunity/fields/Invoiced_SF__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_SF__c</fullName>
    <label>Invoiced SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>