force-app/main/default/objects/Opportunity/fields/isGroup__c.field-meta.xml
<CustomField>
    <fullName>isGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGroup</label>
    <type>Checkbox</type>
</CustomField>